tests/out/error/match/too_few_branches.in.bt
x := 1

match x {}

match x {
	else {}
}
